# Labterial

./: .buildinfo  .gitignore  LICENSE  MANIFEST.in  README.md  fix.sh  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  user_guide.html
.doctrees/: environment.pickle  index.doctree  user_guide.doctree
.doctrees/modules/: app.doctree  cli.doctree  database.doctree  physics.doctree
_modules/: app.html  cli.html  database_mgr.html  index.html  physics.html
_sources/: index.rst.txt  user_guide.rst.txt
_sources/modules/: app.rst.txt  cli.rst.txt
docs/: LEEME.txt
docs/source/: conf.py  index.rst  user_guide.rst
docs/source/modules/: app.rst  database.rst  physics.rst
modules/: app.html  cli.html  database.html  physics.html
src/: app.py  database_mgr.py  physics.py
src/labterial/: app.py  app.py.bak  app.py.bak_flex_fix  app.py.bak_math_detail  app.py.bak_math_fix  app.py.bak_pedagogy_plus  app.py.bak_pre_barcharts  app.py.bak_pre_comparison  app.py.bak_pre_full_physics  app.py.bak_pre_prof_v2  app.py.bak_pre_remove_ashby  app.py.bak_pre_translation  app.py.bak_restore_bench  cli.py  database_mgr.py  database_mgr.py.bak  physics.py
src/labterial/assets/: materials_seed.csv
tests/: test_database.py  test_physics.py
