[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "labterial-sim"
version = "1.2.2"  # <-- Subimos versión para poder publicar los cambios
description = "Suite de simulación de ensayos mecánicos y gestión de materiales."
readme = "README.md"
authors = [
  { name="Tu Nombre", email="tu@email.com" },
]
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics"
]
dependencies = [
    "streamlit>=1.20.0",
    "pandas>=1.5.0",
    "plotly>=5.13.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0"
]

[project.urls]
"Homepage" = "https://github.com/amidamarulas/Labterial"
"Bug Tracker" = "https://github.com/amidamarulas/Labterial/issues"

[project.scripts]
# AQUÍ DEFINIMOS EL COMANDO QUE EL USUARIO ESCRIBIRÁ EN SU CONSOLA
material-lab = "labterial.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
